@@ -1,4 +1,4 @@
-Sun Jun 28 08:49:16 IDT 2020
+Mon Jun 29 11:16:12 IDT 2020
 ============================
 
 There were too many files tracking different thoughts and ideas for
@@ -31,9 +31,6 @@ Minor Cleanups and Code Improvements
 	about genuine errors.
 
 	Message cleanup:
-	* Messages in debug.c start with capital letters, but not in
-	  other files.
-
 	* Messages are inconsistent about final punctuation (periods etc.)
 
 Minor New Features
