@@ -1,5 +1,5 @@
 Breakpoint 1 set at file `dbugeval2.awk', line 3
-Starting program: 
+Starting program:
 Stopping in BEGIN ...
 Breakpoint 1, main() at `dbugeval2.awk':3
 3       	b = 3
