@@ -1,5 +1,5 @@
 Watchpoint 1: e
-Starting program: 
+Starting program:
 number
 untyped
 regexp
