@@ -1,5 +1,5 @@
 Watchpoint 1: x
-Starting program: 
+Starting program:
 Stopping in BEGIN ...
 Watchpoint 1: x
   Old value: untyped variable
