@@ -1,5 +1,5 @@
 Watchpoint 1: y
-Starting program: 
+Starting program:
 Stopping in BEGIN ...
 Watchpoint 1: y
   Old value: untyped variable
