@@ -17,7 +17,7 @@ Watchpoint 1: c
 2: nr = untyped variable
 3: NR = 0
 Breakpoint 2 set at file `watchpoint1.awk', line 6
-Starting program: 
+Starting program:
 Stopping in Rule ...
 Watchpoint 1: c
   Old value: untyped variable
