@@ -1,3 +1,8 @@
+2020-06-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dbugeval2.ok, dbugtypedre1.ok, dbugtypedre2.ok, symtab10.ok,
+	watchpoint1.ok: Updated after code changes.
+
 2020-06-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Miscellanious fixes from Michael Builov <mbuilov@gmail.com>.
