@@ -1,3 +1,9 @@
+2020-06-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* debug.c: Cleanup messages. Error messages start with lower
+	case letter.
+	* TODO: Updated.
+
 2020-06-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Disallow SYMTAB and FUNCTAB as destination arguments to builtin
